<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor">

    <EditText
        android:id="@+id/email_field"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:background="@drawable/square_button_background_rounded"
        android:backgroundTint="@color/primaryLightColor"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:background="@drawable/square_button_background_rounded"
        android:backgroundTint="@color/primaryLightColor"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/square_button_background"
        app:backgroundTint="@color/accent"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/square_button_background"
        app:backgroundTint="@color/accentDark"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageButton
        android:id="@+id/google_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_background"
        android:scaleType="centerInside"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/google_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>